--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -87,11 +87,36 @@
 			    
 			    <popup id="newParticipantPopup">
 					<!-- Ucastnik -->
-					<grid width="550px" sclass="form-grid" style="border: none;" >
+					<grid width="550px" sclass="form-grid" style="border: none;" if="${vm.courseSelectionRequired}" >
 						<columns>
 			                <column align="center" hflex="1" />
 			            </columns>
-						<rows style="background: white;" >
+			            <auxhead>
+			            	<auxheader colspan="2" style="background: #428CCD;">
+			            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+			            			<hbox hflex="1" height="28px" align="center" >
+						            	<vbox hflex="min" vflex="1" sclass="header-div" pack="center" >
+					            			<hbox vflex="1" align="center">
+					            				<label value="${c:l('txt.ui.common.CourseSelection')}"/>
+					            			</hbox>
+					            		</vbox>
+					            		<!-- Vyber mista konani kurzu -->
+										<combobox model="@init(vm.courseLocationList)"
+											onSelect="@command('courseLocationSelectCmd')"
+											selectedItem="@bind(vm.courseLocationSelected)"
+											placeholder="${c:l('txt.ui.common.courseLocation2')}"
+											style="background: white;"
+											hflex="1"
+											readonly="true" >
+											<template name="model">
+								            	<comboitem label="${each.name}"/>
+											</template>
+										</combobox>
+									</hbox>
+			            		</vbox>
+			            	</auxheader>
+			            </auxhead>
+						<rows style="background: white;" >								
 							<row sclass="form-grid-row" style="border: none; padding: 5px 5px 10px 5px;" >
 								<!-- Vyber kurzu -->
 								<cell sclass="form-grid-cell">
@@ -101,26 +126,13 @@
 										selectedItems="@bind(vm.courseSelected)"
 										emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 										class="listbox"
-										visible="@load(vm.courseList ne null)"
+										if="${vm.courseSelectionRequired}"
 										multiple="false"
 										checkmark="true" >
-										
-										<auxhead>
-								            <auxheader class="header" colspan="6" >
-								            	<hbox hflex="1" height="28px" align="center" >
-									            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-								            			<hbox vflex="1" align="center">
-								            				<label value="${c:l('txt.ui.common.CourseSelection')}"/>
-								            			</hbox>
-								            		</vbox>
-												</hbox>
-								            </auxheader>
-								        </auxhead>
 										
 								        <listhead>
 								            <listheader width="25px"  valign="top" />
 								            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="3" valign="top"/>
-								            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(courseLocation.name)" align="left" hflex="2" valign="top" />
 								            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" valign="top" />
 								            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" valign="top" />
 								            <listheader width="50px" align="center" valign="top" />
@@ -130,7 +142,6 @@
 								            <listitem style="${vm.getCourseRowColor(item)}" disabled="${item.fullOccupancy}" >
 								                <listcell></listcell>
 								                <listcell label="${item.name}" style="font-weight: bold;" />
-								                <listcell label="${item.courseLocation.name}" />
 								                <listcell>
 								                	<vbox vflex="1" align="start" forEach="${item.lessonList}" >
 								                		<label value="${vm.getLessonToUi(each)}" />
@@ -157,8 +168,27 @@
 								    </listbox>
 							    </cell>
 							</row>
-							
-							<row sclass="form-grid-row" style="border: none; padding: 0px 10px 10px 10px;" >
+						</rows>
+					</grid>
+					
+					<!-- Ucastnik -->
+					<grid width="550px" sclass="form-grid" style="border: none;" >
+						<columns>
+			                <column align="center" hflex="1" />
+			            </columns>
+						<auxhead>
+			            	<auxheader colspan="2" style="background: #428CCD;">
+			            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+			            			<hbox>
+				            			<vbox>
+				            				<label value="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" />
+										</vbox>
+			            			</hbox>
+			            		</vbox>
+			            	</auxheader>
+			            </auxhead>
+						<rows style="background: white;" >
+							<row sclass="form-grid-row" style="border: none; padding: 10px 10px 10px 10px;" >
 								<cell sclass="form-grid-cell">
 									<vbox hflex="1">
 										<label value="${c:l('txt.ui.common.birthNumber')}"/>
