--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -89,7 +89,7 @@
 					<!-- Ucastnik -->
 					<grid width="550px" sclass="form-grid" style="border: none;" if="${vm.courseSelectionRequired}" >
 						<columns>
-			                <column align="center" hflex="1" />
+			                <column align="left" hflex="1" />
 			            </columns>
 			            <auxhead>
 			            	<auxheader colspan="2" style="background: #428CCD;">
@@ -127,7 +127,14 @@
 									</vbox>
 								</cell>
 							</row>
-															
+							<row sclass="form-grid-row" 
+								style="border: none; padding: 0px 20px 20px 20px;"
+								visible="@load(vm.courseList ne null and vm.courseList.isEmpty())" >
+								<!-- Nenalezen zadky kurz -->
+								<cell sclass="form-grid-cell" >
+									<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
+								</cell>
+							</row>		
 							<row sclass="form-grid-row" visible="@load(!empty(vm.courseList))" style="border: none; padding: 0px 20px 20px 20px;" >
 								<!-- Vyber kurzu -->
 								<cell sclass="form-grid-cell">
