--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -59,7 +59,8 @@
 						</vbox>
 						
 						<!-- Vyber kurzu -->
-						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" if="${vm.courseSelectionRequired}" >
+						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" 
+							if="${vm.courseSelectionRequired}" >
 							<columns>
 				                <column align="left" hflex="1" />
 				            </columns>
@@ -99,7 +100,8 @@
 								</row>
 								<row sclass="form-grid-row" 
 									style="border: none; padding: 0px 20px 20px 20px;"
-									visible="@load(vm.courseList ne null and vm.courseList.isEmpty())" >
+									visible="@load(vm.courseList ne null and vm.courseList.isEmpty())"
+									if="${!vm.securedMode}" >
 									<!-- Nenalezen zadky kurz -->
 									<cell sclass="form-grid-cell" >
 										<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
@@ -108,7 +110,7 @@
 								<row sclass="form-grid-row" 
 									style="border: none; padding: 0px 20px 10px 20px;"
 									visible="@load(!empty(vm.courseList))" >
-									<cell sclass="form-grid-cell" >
+									<cell sclass="form-grid-cell" if="${!vm.securedMode}" >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.SelectCourse')}"/>
 											<!-- Verejna cast -->
@@ -116,7 +118,6 @@
 												hflex="1"
 												selectedItems="@bind(vm.courseSelected)"
 												class="listbox"
-												if="${!vm.securedMode}"
 												multiple="false"
 												checkmark="true" >
 												
@@ -176,35 +177,40 @@
 										    </listbox>
 								    	</vbox>
 									</cell>
-								    
-								    <!-- Admin cast -->
-									<listbox model="@load(vm.courseList)" 
-										hflex="1"
-										emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-										class="listbox"
-										visible="@load(vm.courseList ne null)"
-										if="${vm.securedMode}">
-										
-								        <listhead>
-								            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="2" />
-								            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(description)" align="left" hflex="3" />
-								            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
-								            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" />
-								        </listhead>
-								         
-								        <template name="model" var="item" >
-								            <listitem>
-								                <listcell label="${item.name}" />
-								                <listcell label="${item.courseLocation.name}" />
-								                <listcell>
-								                	<vbox vflex="1" align="center" forEach="${item.lessonList}" >
-								                		<label value="${vm.getLessonToUi(each)}"/>
-													</vbox>
-								                </listcell>
-								                <listcell label="${item.fullOccupancy ? c:l('txt.ui.common.occupied') : item.occupancy}" />
-								            </listitem>
-								        </template>
-								    </listbox>
+								</row>
+								<row sclass="form-grid-row" 
+									style="border: none; padding: 0px 20px 10px 20px;" 
+									if="${vm.securedMode}">
+									<cell sclass="form-grid-cell" >
+										<!-- Admin cast -->
+										<listbox model="@load(vm.courseList)" 
+											hflex="1"
+											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+											class="listbox"
+											visible="@load(vm.courseList ne null)"
+											>
+											
+									        <listhead>
+									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="2" />
+									            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(description)" align="left" hflex="3" />
+									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
+									            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" />
+									        </listhead>
+									         
+									        <template name="model" var="item" >
+									            <listitem>
+									                <listcell label="${item.name}" />
+									                <listcell label="${item.courseLocation.name}" />
+									                <listcell>
+									                	<vbox vflex="1" align="center" forEach="${item.lessonList}" >
+									                		<label value="${vm.getLessonToUi(each)}"/>
+														</vbox>
+									                </listcell>
+									                <listcell label="${item.fullOccupancy ? c:l('txt.ui.common.occupied') : item.occupancy}" />
+									            </listitem>
+									        </template>
+									    </listbox>
+									</cell>
 								</row>
 							</rows>
 						</grid>
