course application file config

--- a/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/send-mail.zul
@@ -10,6 +10,7 @@
 		<center border="none" >
 			<div>
 				<button label="Send mail" onClick="@command('sendMailCmd')" />
+				<button label="Download" onClick="@command('downloadCmd')" />
 			</div>
 		</center>
 	</borderlayout>
