--- a/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
@@ -44,6 +44,7 @@
 		<menuitem label="${c:l('txt.ui.menu.payments')}"
 			tooltiptext="${c:l('txt.ui.menu.bankPayments')}"
 			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))"
+			if="${vm.paymentsAvailable}"
 			href="/pages/secured/ADMIN/seznam-bankovnich-plateb.zul" >
 		</menuitem>
 			
