--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/payment-instruction-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/payment-instruction-window.zul
@@ -13,7 +13,13 @@
 		.z-row:hover > .z-row-inner, .z-row:hover > .z-cell {background:none; !important}			
 	</style>
 	
-    <vbox align="center" hflex="1" >
+    <vbox hflex="1" align="center" >
+    	
+    	<hbox hflex="1" style="margin-top: 10px;margin-bottom: 10px; margin-left: 5px;" align="start">
+			<label value="${c:l('txt.ui.common.PaymentDeadline')}:" />
+			<datebox value="@bind(vm.paymentDeadline)" />
+		</hbox>
+
 		<listbox model="@load(vm.paymentInstructionList)"
 			hflex="1"
 			height="650px"
