--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -37,7 +37,7 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="4" >
+			            <auxheader class="header" colspan="5" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
@@ -50,7 +50,7 @@
 			            			<hbox vflex="1" pack="center" align="center">
 				            			<!-- Zpravy -->
 				            			<button label="${c:l('txt.ui.common.Messaging')}" 
-				            				iconSclass="z-icon-paper-plane"
+				            				iconSclass="z-icon-envelope"
 				            				popup="messagePopup, position=after_end"
 				            				visible="${vm.isLoggedUserInRole('ADMIN')}"
 				            				sclass="btn-warning"  />
@@ -84,35 +84,24 @@
 								value="@bind(vm.filter.courseParticName)"
 								onChange="@command('filterDomCmd')" />
 						</auxheader>
-<!-- 						<auxheader class="filter"> -->
-<!-- 							<textbox hflex="1"  -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.birthDate)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
-<!-- 							<textbox hflex="1"  -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.courseParticRepresentative)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
-<!-- 							<textbox hflex="1"  -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.phone)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
-<!-- 							<textbox hflex="1"  -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.email)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
 						<auxheader class="filter">
 							<textbox hflex="1" 
 								instant="true"
 								value="@bind(vm.filter.course)"
 								onChange="@command('filterDomCmd')" />
+						</auxheader>
+						<auxheader class="filter">
+							<listbox selectedItem="@bind(vm.filter.paymentNotifSendState)" 
+								model="@load(vm.paymentNotifStateListWithEmptyItem)"
+								onSelect="@command('filterDomCmd')"
+								sclass="form-input-text"
+								hflex="1"
+								height="24px"
+								mold="select" >
+								<template name="model">
+					               	<listitem label="@bind(each.label)" value="@bind(each)"/>
+					               </template>
+							</listbox>
 						</auxheader>
 						<auxheader class="filter">
 							<listbox selectedItem="@bind(vm.filter.coursePaymentState)" 
@@ -126,7 +115,6 @@
 					               	<listitem label="@bind(each.label)" value="@bind(each)"/>
 					               </template>
 							</listbox>
-							
 						</auxheader>
 						<auxheader class="filter">
 						</auxheader>
@@ -134,11 +122,8 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(courseParticipant.contact.surname)" align="left" />
-<!-- 			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" /> -->
-<!-- 			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" /> -->
-<!-- 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" /> -->
-<!-- 			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" /> -->
 			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.paymentInstructionSent')}" sort="auto(payed)" align="center" hflex="min" />
 			            <listheader label="${c:l('txt.ui.common.payed')}" sort="auto(payed)" align="center" hflex="min" />
 			            <listheader width="50px" align="center" />
 			        </listhead>
@@ -146,13 +131,18 @@
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-<!-- 			                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
-<!-- 			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
-<!-- 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
-<!-- 			                <listcell label="${each.courseParticRepresentative.contact.email1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
 			                <listcell label="${each.courseParticipant.courseName}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+			                <listcell onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
+			                	<hbox popup="paymentInstructionPopup_${each.uuid}_${each.courseParticipant.courseUuid}, position=after_end" hflex="1" pack="center">
+				                	<a iconSclass="z-icon-check" style="font-size: 20px; color: green;" 
+				                		visible="@load(!empty(each.courseParticipant.notifiedSemester1PaymentAt))"
+				                		tooltiptext="${each.courseParticipant.notifiedSemester1PaymentAt}"/>
+				                	<a iconSclass="z-icon-check" style="font-size: 20px; color: green;" 
+				                		visible="@load(!empty(each.courseParticipant.notifiedSemester2PaymentAt))"
+				                		tooltiptext="${each.courseParticipant.notifiedSemester2PaymentAt}" />
+			                	</hbox>
+			                </listcell>
 			                <listcell tooltiptext="@load(each.courseParticipant.coursePaymentVO.stateTotal) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
-<!-- 		            			<checkbox checked="@load(each.payed)" onCheck="@command('updatePayedCmd', checked=self.checked, uuid=each.uuid)" /> -->
 									<a iconSclass="z-icon-circle" style="font-size: 20px; color: red;" 
 										visible="@load(each.courseParticipant.coursePaymentVO.stateTotal eq 'NO_PAYMENT')"
 										popup="paymentSumPopup_${each.uuid}_${each.courseParticipant.courseUuid}, position=after_end" />
@@ -163,14 +153,7 @@
 								    	visible="@load(each.courseParticipant.coursePaymentVO.stateTotal eq 'PAYED')"
 								    	popup="paymentSumPopup_${each.uuid}_${each.courseParticipant.courseUuid}, position=after_end" />
 								    <popup id="paymentSumPopup_${each.uuid}_${each.courseParticipant.courseUuid}">
-								    	<vbox style="margin: 5px;">
-<!-- 									    	<hbox visible="@load(each.courseParticipant.coursePaymentVO.stateTotal eq 'PARTLY')"> -->
-<!-- 										    	<label value="@load(each.courseParticipant.coursePaymentVO.stateTotal) @converter(vm.enumLabelConverter)" /> -->
-<!-- 									    		<label value="${c:l('txt.ui.common.ToPay')}" style="white-space: nowrap;" /> -->
-<!-- 									    		<label value="@load(each.courseParticipant.coursePaymentVO.toPaySum)" /> -->
-<!-- 									    		<label value=" ${c:l('txt.ui.common.CZK')}" /> -->
-<!-- 									    	</hbox> -->
-											
+								    	<vbox style="margin: 5px;">											
 									    	<payment-instruction orgAccountNumber="${vm.bankAccountNumber}" 
 									    		priceSemester1="${each.courseParticipant.coursePaymentVO.priceFirstSemester}"
 									    		priceSemester2="${each.courseParticipant.coursePaymentVO.priceSecondSemester}"
