--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -134,11 +134,19 @@
 			                <listcell label="${each.courseParticipant.courseName}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
 			                	<hbox popup="paymentInstructionPopup_${each.uuid}_${each.courseParticipant.courseUuid}, position=after_end" hflex="1" pack="center">
-				                	<a iconSclass="z-icon-check" style="font-size: 20px; color: green;"
+				                	<!-- Instrukce prvni pololeti -->
+				                	<a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;"
 				                		visible="@load(!empty(each.courseParticipant.notifiedSemester1PaymentAt))"
 				                		tooltiptext="${each.courseParticipant.notifiedSemester1PaymentAt}"/>
-				                	<a iconSclass="z-icon-check" style="font-size: 20px; color: green;" 
+				                	<a iconSclass="z-icon-check-circle" style="font-size: 20px; color: grey;"
+				                		visible="@load(empty(each.courseParticipant.notifiedSemester1PaymentAt))"
+				                		tooltiptext="${each.courseParticipant.notifiedSemester1PaymentAt}"/>
+				                	<!-- Instrukce druhe pololeti -->
+				                	<a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" 
 				                		visible="@load(!empty(each.courseParticipant.notifiedSemester2PaymentAt))"
+				                		tooltiptext="${each.courseParticipant.notifiedSemester2PaymentAt}" />
+				                	<a iconSclass="z-icon-check-circle" style="font-size: 20px; color: grey;" 
+				                		visible="@load(empty(each.courseParticipant.notifiedSemester2PaymentAt))"
 				                		tooltiptext="${each.courseParticipant.notifiedSemester2PaymentAt}" />
 			                	</hbox>
 			                </listcell>
