payment notification batch sending

--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -26,8 +26,7 @@
 					id="courseList"
 					hflex="1"
 					style="margin-top: 20px;"
-					mold="paging"
-					pageSize="10"
+					height="900px"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
