--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -52,16 +52,15 @@
 				            			<button label="${c:l('txt.ui.common.Messaging')}" 
 				            				iconSclass="z-icon-envelope"
 				            				popup="messagePopup, position=after_end"
-				            				if="false"
 				            				visible="${vm.isLoggedUserInRole('ADMIN')}"
 				            				sclass="btn-warning"  />
-					                	<menupopup id="messagePopup" width="250px" >
+					                	<menupopup id="messagePopup" width="255px" >
 				            				<!-- Nova zprava zobrazenym ucastnikum. -->
 											<menuitem label="${c:l('txt.ui.common.NovaZprava')}" onClick="@command('openModalToSendEmailCmd')" />
 											<!-- Odeslani instrukci k platbe za prvni pololeti. -->
-											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" />
+											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" disabled="true" />
 											<!-- Odeslani instrukci k platbe za druhe pololeti. -->
-											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" />
+											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" disabled="true" />
 								       	</menupopup>
 									</hbox>
 			            		</vbox>
