--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -216,7 +216,7 @@
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
-<!-- 									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)"  /> -->
+									<menuitem label="Odstranit" disabled="${each.courseParticipant.inCourse()}" onClick="@command('deleteCmd', item=each)"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
