grid filtering, remove instant="true" and add onOK to search

--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/email-detail-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/email-detail-window.zul
@@ -42,6 +42,7 @@
 											<textbox hflex="1"
 												value="@bind(vm.filter.address)"
 												instant="true"
+												onOK="@command('filterDomCmd')"
 												onChange="@command('filterDomCmd')" />
 										</auxheader>
 									</auxhead>
