--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -56,9 +56,9 @@
 					<auxhead height="37px">
 						<auxheader class="filter">
 							<textbox hflex="1"
-								instant="true"
 								value="@bind(vm.filter.courseName)"
-								onChange="@command('filterDomCmd')" />
+								onChange="@command('filterDomCmd')"
+								onOK="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
 						</auxheader>
@@ -70,7 +70,6 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="1" />
-<!-- 			            <listheader label="${c:l('txt.ui.common.description2')}" sort="auto(description)" align="left" hflex="1" /> -->
 			            <listheader label="${c:l('txt.ui.common.participantCount')}" sort="auto(participantListCount)" align="center" hflex="min"  />
 			            <listheader width="140px" align="center" />
 			        </listhead>
@@ -78,7 +77,6 @@
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-<!-- 			                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
 			                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell>
 			                	<button label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
