--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/participant-to-course-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/participant-to-course-window.zul
@@ -59,17 +59,17 @@
 				</auxheader>
 				<auxheader class="filter">
 					<textbox hflex="1"
-						instant="true"
 						value="@bind(vm.filter.courseParticName)"
-						onChange="@command('filterDomCmd')" />
+						onChange="@command('filterDomCmd')"
+						onOK="@command('filterDomCmd')" />
 				</auxheader>
 				<auxheader class="filter">
 				</auxheader>
 				<auxheader class="filter">
 					<textbox hflex="1" 
-						instant="true"
 						value="@bind(vm.filter.courseParticRepresentative)"
-						onChange="@command('filterDomCmd')" />
+						onChange="@command('filterDomCmd')"
+						onOK="@command('filterDomCmd')" />
 				</auxheader>
 				<auxheader class="filter" >
 					<listbox selectedItem="@bind(vm.filter.inCourse)"
